@@ -31,6 +31,7 @@ import org.mmbase.core.util.StorageConnector;
 import org.mmbase.datatypes.DataType;
 
 import org.mmbase.storage.StorageException;
+import org.mmbase.storage.StorageNotFoundException;
 import org.mmbase.storage.search.*;
 import org.mmbase.storage.search.implementation.*;
 
@@ -61,7 +62,7 @@ import org.mmbase.util.logging.Logging;
  * @author Rob van Maris
  * @author Michiel Meeuwissen
  * @author Ernst Bunders
- * @version $Id: MMObjectBuilder.java,v 1.402 2006-11-24 14:21:36 pierre Exp $
+ * @version $Id: MMObjectBuilder.java,v 1.391.2.2 2006-10-17 12:08:47 nklasens Exp $
  */
 public class MMObjectBuilder extends MMTable implements NodeEventListener, RelationEventListener {
 
@@ -205,24 +206,20 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     /**
      *  Maintainer information for builder registration
      *  Set with &lt;builder maintainer="mmbase.org" version="0"&gt; in the xml builder file
-     * @scope protected
      */
     String maintainer = "mmbase.org";
 
     /** Collections of (GUI) names (singular) for the builder's objects, divided by language
-     * @scope protected
      */
     Hashtable singularNames;
 
     /** Collections of (GUI) names (plural) for the builder's objects, divided by language
-     * @scope protected
      */
     Hashtable pluralNames;
 
     /**
      * Full filename (path + buildername + ".xml") where we loaded the builder from
      * It is relative from the '/builders/' subdir
-     * @scope protected
      */
     String xmlPath = "";
 
@@ -230,13 +227,37 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Parameters for the GUI function
      * @since MMBase-1.7
      */
-    public final static Parameter[] GUI_PARAMETERS = org.mmbase.util.functions.GuiFunction.PARAMETERS;
+    public final static Parameter[] GUI_PARAMETERS = {
+        Parameter.FIELD,
+        Parameter.LANGUAGE,
+        new Parameter("session", String.class),
+        Parameter.RESPONSE,
+        Parameter.REQUEST,
+        Parameter.LOCALE,
+        new Parameter("stringvalue", String.class)
+        //new Parameter("length", Integer.class),
+        //       field, language, session, response, request) Returns a (XHTML) gui representation of the node (if field is '') or of a certain field. It can take into consideration a http session variable name with loging information and a language");
 
+    };
     /**
      * The famous GUI function as a function object.
      * @since MMBase-1.8
      */
-    protected Function<String> guiFunction = new GuiFunction();
+    protected Function guiFunction = new NodeFunction("gui", GUI_PARAMETERS, ReturnType.STRING) {
+            protected Object getFunctionValue(Node node, Parameters parameters) {
+                if (log.isDebugEnabled()) {
+                    log.debug("GUI of builder with " + parameters);
+                }
+                String fieldName = (String) parameters.get(Parameter.FIELD);
+                if (fieldName != null && (! fieldName.equals("")) && parameters.get("stringvalue") == null) {
+                    if (node.getSize(fieldName) < 2000) {
+                        parameters.set("stringvalue", node.getStringValue(fieldName));
+                    }
+                }
+                MMObjectNode n = (MMObjectNode) parameters.get(Parameter.CORENODE);
+                return MMObjectBuilder.this.getGUIIndicator(n, parameters);
+            }
+        };
     {
         addFunction(guiFunction);
     }
@@ -255,11 +276,11 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * This function can be called through the function framework.
      * @since MMBase-1.8
      */
-    protected Function<String> wrapFunction = new NodeFunction<String>("wrap", WRAP_PARAMETERS, ReturnType.STRING) {
+    protected Function wrapFunction = new NodeFunction("wrap", WRAP_PARAMETERS, ReturnType.STRING) {
             {
                 setDescription("This function wraps a field, word-by-word. You can use this, e.g. in <pre>-tags. This functionality should be available as an 'escaper', and this version should now be considered an example.");
             }
-            public String getFunctionValue(Node node, Parameters parameters) {
+            public Object getFunctionValue(Node node, Parameters parameters) {
                 String val = node.getStringValue(parameters.getString(Parameter.FIELD));
                 Number wrappos = (Number) parameters.get("length");
                 return wrap(val, wrappos.intValue());
@@ -274,15 +295,15 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * This is overridden from FunctionProvider, because this one needs to be (also) a NodeFunction
      * @since MMBase-1.8
      */
-    protected Function<Collection<? extends Function>> getFunctions = new NodeFunction<Collection<? extends Function>>("getFunctions", Parameter.EMPTY, ReturnType.COLLECTION) {
+    protected Function getFunctions = new NodeFunction("getFunctions", Parameter.EMPTY, ReturnType.SET) {
             {
                 setDescription("The 'getFunctions' returns a Map of al Function object which are available on this FunctionProvider");
             }
-            public Collection<? extends Function> getFunctionValue(Node node, Parameters parameters) {
+            public Object getFunctionValue(Node node, Parameters parameters) {
                 return MMObjectBuilder.this.getFunctions(getCoreNode(MMObjectBuilder.this, node));
             }
-            public Collection<? extends Function> getFunctionValue(Parameters parameters) {
-                Node node = parameters.get(Parameter.NODE);
+            public Object getFunctionValue(Parameters parameters) {
+                Node node = (Node) parameters.get(Parameter.NODE);
                 if (node == null) {
                     return MMObjectBuilder.this.getFunctions();
                 } else {
@@ -298,15 +319,17 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * The info-function is a node-function and a builder-function. Therefore it is defined as a node-function, but also overidesd getFunctionValue(Parameters).
      * @since MMBase-1.8
      */
-    protected Function<Object> infoFunction = new NodeFunction<Object>("info", new Parameter[] { new Parameter("function", String.class) }, ReturnType.UNKNOWN) {
+    protected Function infoFunction = new NodeFunction("info", new Parameter[] { new Parameter("function", String.class) }, ReturnType.UNKNOWN) {
             {
                 setDescription("Returns information about available functions");
             }
-            protected Object getFunctionValue(Collection<Function<?>> functions, Parameters parameters) {
+            protected Object getFunctionValue(Collection functions, Parameters parameters) {
                 String function = (String) parameters.get("function");
                 if (function == null || function.equals("")) {
-                    Map<String, String> info = new HashMap();
-                    for (Function f : functions) {
+                    Map info = new HashMap();
+                    Iterator i = functions.iterator();
+                    while (i.hasNext()) {
+                        Function f = (Function) i.next();
                         info.put(f.getName(), f.getDescription());
                     }
                     return info;
@@ -320,7 +343,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 return getFunctionValue(MMObjectBuilder.this.getFunctions(getCoreNode(MMObjectBuilder.this, node)), parameters);
             }
             public Object getFunctionValue(Parameters parameters) {
-                MMObjectNode node = (MMObjectNode) parameters.get(Parameter.CORENODE);
+                MMObjectNode node = (MMObjectNode) parameters.get(Parameter.NODE);
                 if (node == null) {
                     return getFunctionValue(MMObjectBuilder.this.getFunctions(), parameters);
                 } else {
@@ -333,7 +356,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     // contains the builder's field definitions
-    protected final Map<String, CoreField> fields = new HashMap<String, CoreField>();
+    protected final Map fields = new HashMap();
 
     /**
      * Determines whether a builder is virtual (data is not stored in the storage layer).
@@ -343,18 +366,18 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     /**
      *  Set of remote observers, which are notified when a node of this type changes
      */
-    private final Set<MMBaseObserver> remoteObservers = Collections.synchronizedSet(new HashSet());
+    private Set remoteObservers = Collections.synchronizedSet(new HashSet());
 
     /**
      * Set of local observers, which are notified when a node of this type changes
      */
-    private final Set<MMBaseObserver> localObservers = Collections.synchronizedSet(new HashSet());
+    private Set localObservers = Collections.synchronizedSet(new HashSet());
 
     /**
      * Reference to the builders that this builder extends.
      * @since MMBase-1.6.2 (parentBuilder in 1.6.0)
      */
-    private Stack<MMObjectBuilder> ancestors = new Stack<MMObjectBuilder>();
+    private Stack ancestors = new Stack();
 
     /**
      * Version information for builder registration
@@ -367,7 +390,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Contains lists of builder fields in specified order
      * (ORDER_CREATE, ORDER_EDIT, ORDER_LIST, ORDER_SEARCH)
      */
-    private Map<Integer, List<CoreField>> sortedFieldLists = new HashMap<Integer, List<CoreField>>();
+    private Map sortedFieldLists = new HashMap();
 
     /** Properties of a specific Builder.
      * Specified in the xml builder file with the <properties> tag.
@@ -389,7 +412,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
 
     private void initAncestors() {
         if (! ancestors.empty()) {
-            ancestors.peek().init();
+            ((MMObjectBuilder) ancestors.peek()).init();
         }
     }
 
@@ -449,10 +472,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                     }
 
                     log.debug("Got key " + oType);
-                    node.storeValue(FIELD_NUMBER, oType);
+                    node.storeValue(FIELD_NUMBER, new Integer(oType));
                     // for typedef, set otype explictly, as it wasn't set in getNewNode()
                     if (this == typeDef) {
-                        node.storeValue(FIELD_OBJECT_TYPE, oType);
+                        node.storeValue(FIELD_OBJECT_TYPE, new Integer(oType));
                     }
                     typeDef.insert(SYSTEM_OWNER, node, false);
                     // for typedef, call it's parents init again, as otype is only now set
@@ -489,6 +512,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         //now register it as a listener for events of it's own type
         //this is only for backwards compatibility, to notify the MMBaseObserver's
         MMBase.getMMBase().addNodeRelatedEventsListener(getTableName(), this);
+
 
         return true;
     }
@@ -595,7 +619,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         if (n <= 0) {
             log.warn("Did not get valid nodeNumber of storage " + n);
         }
-        Integer nodeNumber = Integer.valueOf(n);
+        Integer nodeNumber = new Integer(n);
         if (isNodeCached(nodeNumber)) {
             // it seems that something put the node in the cache already.
             // This is usually because the ChangeManager indirectly called 'getNode'
@@ -680,7 +704,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public MMObjectBuilder getParentBuilder() {
         if (ancestors.empty()) return null;
-        return ancestors.peek();
+        return (MMObjectBuilder) ancestors.peek();
     }
     /**
      * Gives the list of parent-builders.
@@ -688,7 +712,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.6.2
 
      */
-    public List<MMObjectBuilder>  getAncestors() {
+    public List  getAncestors() {
         return Collections.unmodifiableList(ancestors);
     }
 
@@ -697,15 +721,17 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *
      * @since MMBase-1.6.2
      */
-    public List<MMObjectBuilder> getDescendants() {
-        List<MMObjectBuilder> result = new ArrayList();
-        for (MMObjectBuilder builder : mmb.getBuilders()) {
+    public List getDescendants() {
+        ArrayList result = new ArrayList();
+        for (Iterator i = mmb.getBuilders().iterator(); i.hasNext(); ) {
+            MMObjectBuilder builder = (MMObjectBuilder) i.next();
             if (builder.isExtensionOf(this)) {
                 result.add(builder);
             }
         }
         return result;
     }
+
 
     /**
      * Sets the builder that this builder extends, and registers it in the storage layer.
@@ -772,7 +798,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param node The node to set the defaults of.
      */
     public void setDefaults(MMObjectNode node) {
-        for (CoreField field : getFields()) {
+        for (Iterator i = getFields().iterator(); i.hasNext(); ) {
+            CoreField field = (CoreField) i.next();
             if (field.getName().equals(FIELD_NUMBER))      continue;
             if (field.getName().equals(FIELD_OWNER))       continue;
             if (field.getName().equals(FIELD_OBJECT_TYPE)) continue;
@@ -828,7 +855,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         try {
             while (! found) {
                 NodeSearchQuery query = new NodeSearchQuery(this);
-                BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(query.getField(getField(field)), Integer.valueOf(seq));
+                BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(query.getField(getField(field)), new Integer(seq));
                 query.setConstraint(constraint);
                 if (getNodes(query).size() == 0) {
                     found = true;
@@ -881,12 +908,14 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         try {
             MMObjectBuilder syncnodes = mmb.getBuilder("syncnodes");
             NodeSearchQuery query = new NodeSearchQuery(syncnodes);
-            Integer numericalValue = node.getNumber();
+            Object numericalValue = new Integer(node.getNumber());
             BasicStepField field = query.getField(syncnodes.getField("localnumber"));
             BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(field,
                                                                                  numericalValue);
             query.setConstraint(constraint);
-            for (MMObjectNode syncnode : syncnodes.getNodes(query)) {
+            Iterator syncs = syncnodes.getNodes(query).iterator();
+            while (syncs.hasNext()) {
+                MMObjectNode syncnode = (MMObjectNode) syncs.next();
                 syncnode.parent.removeNode(syncnode);
                 if (log.isDebugEnabled()) {
                     log.debug("Removed syncnode " + syncnode);
@@ -935,7 +964,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.8
      */
     public MMObjectNode getNodeFromCache(Integer number) {
-        return nodeCache.get(number);
+        return (MMObjectNode) nodeCache.get(number);
     }
 
     /**
@@ -971,7 +1000,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 cacheLocked++;
             }
             if (node.getNumber() > 0 ) {
-                nodeCache.remove(node.getNumber());
+                Integer number = new Integer(node.getNumber());
+                nodeCache.remove(number);
             }
 
             res = node.commit();
@@ -1115,7 +1145,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     public MMObjectNode getNewTmpNode(String owner,String key) {
         MMObjectNode node = null;
         node = getNewNode(owner);
-        node.storeValue(TMP_FIELD_NUMBER, key);
+        node.setValue(TMP_FIELD_NUMBER, key);
         temporaryNodes.put(key, node);
         return node;
     }
@@ -1126,7 +1156,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param node The node to store
      */
     public void putTmpNode(String key, MMObjectNode node) {
-        node.storeValue(TMP_FIELD_NUMBER, key);
+        node.setValue(TMP_FIELD_NUMBER, key);
         temporaryNodes.put(key, node);
     }
 
@@ -1193,9 +1223,10 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Return a copy of the list  of field definitions of this table.
      * @return An unmodifiable <code>Collection</code> with the tables fields
      */
-    public Collection<CoreField> getFields() {
+    public Collection getFields() {
         return Collections.unmodifiableCollection(fields.values());
     }
+
 
     /**
      * Return a list of field names of this table.
@@ -1216,6 +1247,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return (FieldDefs) fields.get(fieldName.toLowerCase());
     }
 
+
     /**
      * @since MMBase-1.8
      */
@@ -1227,7 +1259,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Clears all field list caches, and recalculates the field list.
      */
     protected void updateFields() {
-        sortedFieldLists.clear();
+        sortedFieldLists = new HashMap();
         update();
     }
 
@@ -1243,6 +1275,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         updateFields();
     }
+
 
     /**
      * Remove a field from this builder.
@@ -1261,6 +1294,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         updateFields();
     }
+
 
     /**
      * Return a field's storage type. The returned value is one of the following values
@@ -1329,9 +1363,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * A complicated default implementation for GUI.
      * @since MMBase-1.8
      */
-    public String getGUIIndicator(MMObjectNode node, Parameters pars) {
-        Locale locale = pars.get(Parameter.LOCALE);
-        String language = pars.get(Parameter.LANGUAGE);
+    protected String getGUIIndicator(MMObjectNode node, Parameters pars) {
+        Locale locale = (Locale) pars.get(Parameter.LOCALE);
+        String language = (String) pars.get(Parameter.LANGUAGE);
         if (locale == null) {
             if (language != null) {
                 locale = new Locale(language, "");
@@ -1380,7 +1414,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 if (dataType instanceof org.mmbase.datatypes.BinaryDataType) {
                     returnValue = node.isNull(field) ? "" : "" + node.getSize(field) + " byte";
                 } else {
-                    returnValue = dataType.getEnumerationValue(locale, pars.get(Parameter.CLOUD), pars.get(Parameter.NODE), fdef, node.getStringValue(field));
+                    returnValue = dataType.getEnumerationValue(locale, (Cloud) pars.get(Parameter.CLOUD), (Node) pars.get(Parameter.NODE), fdef, node.getStringValue(field));
                 }
             } else {
                 returnValue = null;
@@ -1423,9 +1457,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         // do the best we can because this method was not implemented
         // we get the first field in the object and try to make it
         // to a string we can return
-        List<CoreField> list = getFields(NodeManager.ORDER_LIST);
+        List list = getFields(NodeManager.ORDER_LIST);
         if (list.size() > 0) {
-            String fname = list.get(0).getName();
+            String fname = ((CoreField) list.get(0)).getName();
             String str = node.getStringValue( fname );
             if (str.length() > 128) {
                 str =  str.substring(0, 128) + "...";
@@ -1493,6 +1527,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
     }
 
+
     /**
      * The GUIIndicator can depend on the locale. Override this function
      * @since MMBase-1.6
@@ -1510,6 +1545,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return getGUIIndicator(node);
     }
 
+
     /**
      * Gets the field definitions for the editor, sorted according
      * to the specified order, and excluding the fields that have
@@ -1520,11 +1556,12 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *        {@link org.mmbase.core.CoreField CoreField}
      * @return The ordered list of field definitions.
      */
-    public List<CoreField> getFields(int sortOrder) {
-        List<CoreField> orderedFields = sortedFieldLists.get(sortOrder);
+    public List getFields(int sortOrder) {
+        List orderedFields = (List)sortedFieldLists.get(new Integer(sortOrder));
         if (orderedFields == null) {
-            orderedFields = new ArrayList<CoreField>();
-            for (CoreField field : fields.values()) {
+            orderedFields = new ArrayList();
+            for (Iterator i = fields.values().iterator(); i.hasNext();) {
+                CoreField field = (CoreField)i.next();
                 if (field.isTemporary()) {
                     continue;
                 }
@@ -1540,7 +1577,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
                 }
             }
             Fields.sort(orderedFields, sortOrder);
-            sortedFieldLists.put(sortOrder, Collections.unmodifiableList(orderedFields));
+            sortedFieldLists.put(new Integer(sortOrder), Collections.unmodifiableList(orderedFields));
         } else {
             //log.info("From cache!");
         }
@@ -1548,11 +1585,41 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     /**
+     * Get the field definitions for the editor, sorted according to it's GUISearch property (as set in the builder xml file).
+     * Used for creating search-forms.
+     * @deprecated use getFields() with sortorder ORDER_SEARCH
+     * @return a vector with CoreField objects
+     */
+    public Vector getEditFields() {
+        return (Vector)getFields(NodeManager.ORDER_SEARCH);
+    }
+
+    /**
+     * Get the field definitions for the editor, sorted accoring to it's GUIList property (as set in the builder xml file).
+     * Used for creating list-forms (tables).
+     * @deprecated use getFields() with sortorder ORDER_LIST
+     * @return a vector with CoreField objects
+     */
+    public Vector getSortedListFields() {
+        return (Vector)getFields(NodeManager.ORDER_LIST);
+    }
+
+    /**
+     * Get the field definitions for the editor, sorted according to it's GUIPos property (as set in the builder xml file).
+     * Used for creating edit-forms.
+     * @deprecated use getFields() with sortorder ORDER_EDIT
+     * @return a vector with CoreField objects
+     */
+    public Vector getSortedFields() {
+        return (Vector)getFields(NodeManager.ORDER_EDIT);
+    }
+
+    /**
      * Returns the next field as defined by its sortorder, according to the specified order.
      */
     public FieldDefs getNextField(String currentfield, int sortorder) {
         CoreField cdef = getField(currentfield);
-        List<CoreField> sortedFields = getFields(sortorder);
+        List sortedFields = getFields(sortorder);
         int pos = sortedFields.indexOf(cdef);
         if (pos != -1  && (pos+1) < sortedFields.size()) {
             return (FieldDefs) sortedFields.get(pos+1);
@@ -1581,11 +1648,13 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @since MMBase-1.8
      */
     public int clearBlobCache(int nodeNumber) {
+        Iterator i = getFields().iterator();
         int result = 0;
-        for (CoreField field : getFields()) {
+        while (i.hasNext()) {
+            CoreField field = (CoreField) i.next();
             String fieldName = field.getName();
             BlobCache cache = getBlobCache(fieldName);
-            String key = cache.getKey(nodeNumber, fieldName);
+            String key = cache.getKey(nodeNumber,fieldName);
             if (cache.remove(key) != null) result++;
         }
         return result;
@@ -1748,7 +1817,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * Returns all Functions which are available (or at least known to be available) on a Node.
      * @since MMBase-1.8
      */
-    protected Collection<Function<?>> getFunctions(MMObjectNode node) {
+    protected Collection getFunctions(MMObjectNode node) {
         Collection builderFunctions = getFunctions();
         Collection nodeFunctions = new HashSet();
         for (Iterator i = builderFunctions.iterator(); i.hasNext();) {
@@ -1765,8 +1834,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @inheritDoc
      * @since MMBase-1.8
      */
-    protected Function<Object> newFunctionInstance(String name, Parameter[] parameters, ReturnType returnType) {
-        return new NodeFunction<Object>(name, parameters, returnType) {
+    protected Function newFunctionInstance(String name, Parameter[] parameters, ReturnType returnType) {
+        return new NodeFunction(name, parameters, returnType) {
                 public Object getFunctionValue(Node node, Parameters parameters) {
                     return MMObjectBuilder.this.executeFunction(getCoreNode(MMObjectBuilder.this, node),
                                                                 name,
@@ -1926,7 +1995,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
              NumberFormat nf = NumberFormat.getNumberInstance (Locale.GERMANY);
              return  "" + nf.format(val);
         } else {
-            StringBuilder arg = new StringBuilder(field);
+            StringBuffer arg = new StringBuffer(field);
              if (arguments != null) {
                  for (int i = 1; i < arguments.size(); i++) {
                      if (arg.length() > 0) arg.append(',');
@@ -2011,6 +2080,15 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     }
 
     /**
+     * Get the next object key (unique index for an object).
+     * @return an <code>int</code> value that is the next available key for an object.
+     * @deprecated use MMBase.getStorageManager().createKey()
+     */
+    public int getDBKey() {
+        return mmb.getStorageManager().createKey();
+    }
+
+    /**
      * Get the name of this mmserver from the MMBase Root
      * @return a <code>String</code> which is the server's name
      */
@@ -2030,7 +2108,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      */
     public boolean nodeRemoteChanged(String machine, String number, String builder, String ctype) {
         // signal all the other objects that have shown interest in changes of nodes of this builder type.
-        for (MMBaseObserver o : remoteObservers) {
+        for (Iterator i = remoteObservers.iterator(); i.hasNext();) {
+            MMBaseObserver o = (MMBaseObserver) i.next();
             if (o != this) {
                 o.nodeRemoteChanged(machine, number, builder, ctype);
             } else {
@@ -2054,7 +2133,8 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
    public boolean nodeLocalChanged(String machine, String number, String builder, String ctype) {
        // signal all the other objects that have shown interest in changes of nodes of this builder type.
        synchronized(localObservers) {
-           for (MMBaseObserver o : localObservers) {
+           for (Iterator i = localObservers.iterator(); i.hasNext();) {
+               MMBaseObserver o = (MMBaseObserver)i.next();
                if (o != this) {
                    o.nodeLocalChanged(machine, number, builder, ctype);
                } else {
@@ -2151,6 +2231,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         throw new UnsupportedOperationException(getClass().getName() +" should override the getList method (you've probably made a typo)");
     }
 
+
     /**
      * Obtains a string value by performing the provided command.
      * The command can be called:
@@ -2188,7 +2269,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param e the description text
      */
     public void setDescription(String e) {
-        this.description = e;
+        this.description=e;
         update();
     }
 
@@ -2197,7 +2278,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param e a <code>Hashtable</code> containing the descriptions
      */
     public void setDescriptions(Hashtable e) {
-        this.descriptions = e;
+        this.descriptions=e;
         update();
     }
 
@@ -2354,6 +2435,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return true;
     }
     */
+
 
     /**
      * Sets a list of singular names (language - value pairs)
@@ -2566,10 +2648,12 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      *
      * @param f A List with fields (as CoreField objects) as defined by MMBase. This may not be in sync with the actual database table, about which Storage will report then.
      */
-    public void setFields(List<CoreField> f) {
+    public void setFields(List f) {
         fields.clear();
 
-        for (CoreField def : f) {
+        Iterator i = f.iterator();
+        while (i.hasNext()) {
+            CoreField def = (CoreField) i.next();
             String name = def.getName();
             def.setParent(this);
             fields.put(name.toLowerCase(), def);
@@ -2585,7 +2669,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
             // here, we should set the DBPos to 2 and adapt those of the others fields
             def.setStoragePosition(2);
             def.getDataType().setRequired(true);
-            for (CoreField field : f) {
+            i = f.iterator();
+            while (i.hasNext()) {
+                CoreField field = (CoreField) i.next();
                 int pos = field.getStoragePosition();
                 if (pos > 1) field.setStoragePosition(pos + 1);
             }
@@ -2654,6 +2740,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         return properties;
     }
 
+    
     /**
      * Get all builder properties and override properties through application context
      * @param contextPath path in application context where properties are located
@@ -2663,7 +2750,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
     public Map getInitParameters(String contextPath) {
         Map map = new HashMap();
         map.putAll(getInitParameters());
-
+        
         try {
             Map contextMap = ApplicationContextReader.getProperties(contextPath);
             if (!contextMap.isEmpty()) {
@@ -2674,7 +2761,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         return map;
     }
-
+    
     /**
      * Set a single builder property
      * The propertie will not be saved.
@@ -2761,29 +2848,33 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
      * @param width the maximum width to wrap at
      * @return the wrapped tekst
      */
-    public String wrap(String text, int width) {
-        StringBuilder dst = new StringBuilder();
-        StringTokenizer tok = new StringTokenizer(text," \n\r",true);
-        int pos = 0;
+    public String wrap(String text,int width) {
+        StringTokenizer tok;
+        String word;
+        StringBuffer dst=new StringBuffer();
+        int pos;
+
+        tok=new StringTokenizer(text," \n\r",true);
+        pos=0;
         while(tok.hasMoreTokens()) {
-            String word = tok.nextToken();
+            word=tok.nextToken();
             if (word.equals("\n")) {
-                pos = 0;
+                pos=0;
             } else if (word.equals(" ")) {
-                if (pos == 0) {
-                    word = "";
+                if (pos==0) {
+                    word="";
                 } else {
                     pos++;
-                    if (pos >= width) {
-                        word = "\n";
-                        pos = 0;
+                    if (pos>=width) {
+                        word="\n";
+                        pos=0;
                     }
                 }
             } else {
-                pos += word.length();
-                if (pos >= width) {
+                pos+=word.length();
+                if (pos>=width) {
                     dst.append("\n");
-                    pos = word.length();
+                    pos=word.length();
                 }
             }
             dst.append(word);
@@ -2913,7 +3004,9 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
         }
         int type = event.getType();
         eventBackwardsCompatible(event.getMachine(), event.getNodeNumber(), type);
+
     }
+
 
     /**
      * @since MMBase-1.8
@@ -2929,7 +3022,7 @@ public class MMObjectBuilder extends MMTable implements NodeEventListener, Relat
          if (event.getRelationDestinationType().equals(getTableName())) {
              eventBackwardsCompatible(event.getMachine(), event.getRelationDestinationNumber(), NodeEvent.TYPE_RELATION_CHANGE);
          }
-
+         
          //update the cache
          Integer changedNode = new Integer((event.getRelationDestinationType().equals(getTableName()) ? event.getRelationSourceNumber() : event.getRelationDestinationNumber()));
          MMObjectNode.delRelationsCache(changedNode);
